@@ -1,3 +1,9 @@
+2005-12-10  Yann Hodique  <Yann.Hodique@lifl.fr>
+
+	* dotemacs.el (functionp): use global-hi-lock-mode
+
+	* config/ido-config.el (yh/ido-setup): reflect changes to ido-mode
+
 2005-11-19  Yann Hodique  <Yann.Hodique@lifl.fr>
 
 	* perso/patches.el (open-line): fixed behavior for negative arg
